--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <!-- Fan Info Inputs -->
     <div class="fan-info-container">
         <div>
-            <label for="fanQuestion" class="fan-info-label">Fan Question of the Night</label>
+            <label for="fanQuestion" class="fan-info-label">Hot Seat Question</label>
             <textarea id="fanQuestion" class="fan-info-textarea" placeholder="Enter fan question" rows="3" oninput="saveFormData(); adjustTextareaHeight(this)"></textarea>
         </div>
         <div>
