--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
     <div class="fan-info-container">
         <div>
             <label for="fanQuestion" class="fan-info-label">High Limit Racing Hot Seat Question</label>
-            <textarea id="fanQuestion" class="fan-info-textarea" placeholder="Enter fan question" rows="3" oninput="saveFormData(); adjustTextareaHeight(this)"></textarea>
+            <textarea id="fanQuestion" class="fan-info-textarea" placeholder="Enter Fan's Question" rows="3" oninput="saveFormData(); adjustTextareaHeight(this)"></textarea>
         </div>
         <div>
-            <input type="text" id="fanName" class="fan-info-input" placeholder="Enter fan’s name" oninput="saveFormData()">
+            <input type="text" id="fanName" class="fan-info-input" placeholder="Enter Fan’s Name" oninput="saveFormData()">
         </div>
         <div>
-            <input type="text" id="fanHometown" class="fan-info-input" placeholder="Enter fan’s hometown" oninput="saveFormData()">
+            <input type="text" id="fanHometown" class="fan-info-input" placeholder="Enter Fan’s Hometown" oninput="saveFormData()">
         </div>
     </div>
 
